Switched to using slate editor

--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "mui-color-input": "^7.0.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "slate": "^0.123.0",
+    "slate-react": "^0.123.0",
     "uuid": "^13.0.0",
     "zod": "^4.3.6",
     "zustand": "^5.0.11"
