Configured for server

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,17 +1,17 @@
 server {
     listen 80;
+    server_name localhost;
 
-    location / {
-        root /usr/share/nginx/html;
-        index index.html index.htm;
-        # This line is the magic for SPAs:
-        try_files $uri $uri/ /index.html;
+    location /dnd-card-maker {
+        # Using alias ensures /dnd-card-maker maps directly to the folder content
+        alias /usr/share/nginx/html/dnd-card-maker/;
+        index index.html;
+        try_files $uri $uri/ /dnd-card-maker/index.html;
     }
 
-    # Optional: Cache static assets
-    location /assets/ {
-        root /usr/share/nginx/html;
-        expires 1y;
-        add_header Cache-Control "public, immutable";
+    # Helper for the assets folder specifically
+    location /dnd-card-maker/assets/ {
+        alias /usr/share/nginx/html/dnd-card-maker/assets/;
+        autoindex off;
     }
 }
