--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,4 +1,3 @@
-# Stage 1: Build stage
 FROM node:20-alpine AS build-stage
 WORKDIR /app
 COPY package*.json ./
@@ -8,8 +7,12 @@ RUN npm run build
 
 # Stage 2: Production stage
 FROM nginx:stable-alpine AS production-stage
-# Copy the built assets from the build-stage
-COPY --from=build-stage /app/dist /usr/share/nginx/html
+# Clear existing defaults
+RUN rm -rf /usr/share/nginx/html/*
+# Create the specific subfolder
+RUN mkdir -p /usr/share/nginx/html/dnd-card-maker
+# Copy assets into that subfolder
+COPY --from=build-stage /app/dist /usr/share/nginx/html/dnd-card-maker
 # Copy custom nginx config to handle SPA routing
 COPY nginx.conf /etc/nginx/conf.d/default.conf
 EXPOSE 80
